deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-todo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-todo
  template:
    metadata:
      labels:
        app: django-todo
    spec:
      containers:
      - name: django-todo
        image: django-todo:1.0  # criar com latest nao funciona inicialmente
        ports:
        - containerPort: 8000
